<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:contentDescription="@string/str_home"
        android:icon="@drawable/ic_home"
        android:title="@string/str_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/notificationsFragment"
        android:contentDescription="@string/str_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/str_notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/exploreFragment"
        android:contentDescription="@string/str_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/str_explore"
        app:showAsAction="never" />

    <item
        android:id="@+id/profileFragment"
        android:contentDescription="@string/str_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/str_profile"
        app:showAsAction="never" />

</menu>