<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:src="@drawable/im_profile"
                app:shapeAppearanceOverlay="@style/circle" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_regular_font"
                android:text="@string/str_name"
                android:textColor="@color/light_black"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mplus_bold_font"
            android:text="@string/str_project_name"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="20sp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_star_baseline" />

            <TextView
                android:id="@+id/tv_stars_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/str_star_count"
                android:textSize="14sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/dot_language"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="6dp"
                android:background="@color/purple_200"
                app:shapeAppearanceOverlay="@style/circle" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:text="@string/str_kotlin"
                android:textColor="@color/light_black"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />
</FrameLayout>