<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="5dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_arrow_back">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/line"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/inter_regular_font"
                    android:hint="@string/str_search_github"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/line"
                    android:textStyle="normal"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="16dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/str_repositories"
                    android:textAllCaps="false"
                    android:textColor="@color/light_black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/str_user"
                    android:textAllCaps="false"
                    android:textColor="@color/light_black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </RadioGroup>

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray">

            <LinearLayout
                android:id="@+id/linear_layout_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_gray"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mplus_bold_font"
                    android:gravity="center"
                    android:text="@string/str_find_your_stuff"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_regular_font"
                    android:gravity="center"
                    android:text="@string/str_search_all_of_github"
                    android:textAllCaps="false"
                    android:textColor="@color/light_black"
                    android:textSize="18sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"/>

        </FrameLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>